zeit.cms changes
================

1.2.5 (unreleased)
------------------

- Erstes Release nach der Trennung von zeit.cms