@@ -1,0 +1,7 @@
+# Copyright (c) 2008 gocept gmbh & co. kg
+# See also LICENSE.txt
+
+import zope.i18nmessageid
+
+
+MessageFactory = zope.i18nmessageid.MessageFactory('zeit.seo')
